logs/gitticket.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/gitticket'...
Compiling './lib/python3.5/site-packages/gitticket/bitbucket.py'...
***   File "./lib/python3.5/site-packages/gitticket/bitbucket.py", line 39
    print "Visit this url and copy&paste your PIN.\n{0}".format(auth_url)
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitticket/cmd.py'...
***   File "./lib/python3.5/site-packages/gitticket/cmd.py", line 15
    print u'No open tickets.\n'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gitticket/config.py'...
***   File "./lib/python3.5/site-packages/gitticket/config.py", line 137
    url = util.regex_extract(ur'^url\.(.+)\.insteadof', urlkey)
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitticket/ticket.py'...
***   File "./lib/python3.5/site-packages/gitticket/ticket.py", line 200
    content = util.regex_extract(ur'^:(.+?):(.*)', line)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitticket/util.py'...
***   File "./lib/python3.5/site-packages/gitticket/util.py", line 35
    ur"""空行はそのまま、コメントのみの行は行ごと削除する
    >>> rmcomment('hello # This is a comment\n# this is a comment\ncontent\n\nsecond content')
    u'hello \ncontent\n\nsecond content'
    """
                                 
                                                                                              
                                        
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitticket-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rauth'...
Listing './lib/python3.5/site-packages/rauth-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
